# SDL2_Based_Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
Assets/: mainShader.vert
src/: Game.cpp  Game.h  Main.cpp
src/Engine/: BaseGame.cpp  BaseGame.h  Config.h  Support.cpp  Support.h  TextureManager.cpp  TextureManager.h
src/Engine/Audio/: Audio.cpp  Audio.h  Music.cpp  Music.h  Sound.cpp  Sound.h
src/Engine/Helper/: Format.h  Logger.cpp  Logger.h  StringHelp.cpp  StringHelp.h
src/Engine/Math/: Color.cpp  Color.h  Colorf.cpp  Colorf.h  MathHelper.cpp  MathHelper.h  Rectangle.cpp  Rectangle.h  Rectanglef.cpp  Rectanglef.h  Vector2.cpp  Vector2.h  Vector2f.cpp  Vector2f.h  Vector3.cpp  Vector3.h  Vector3f.cpp  Vector3f.h
src/Engine/Rendering/: FontTexture.h  ImageTexture.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.h  Sprite.cpp  Sprite.h  Texture.h  TtfFont.h  TtfTexture.h
src/Engine/Rendering/2D/: FontTexture.cpp  FontTexture.h  ImageTexture.cpp  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TtfTexture.cpp
src/Engine/Rendering/OpenGL/: FontTexture.cpp  ImageTexture.cpp  ImageTexture.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Renderer_Init.cpp  Shader.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TtfFont.cpp  TtfFont.h  TtfTexture.cpp  glad.c
src/Engine/Rendering/OpenGL/glad/: glad.h
src/Engine/Rendering/OpenGL_ES/: FontTexture.cpp  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Renderer_Init.cpp  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TtfTexture.h  glad.c
src/Engine/Rendering/OpenGL_ES/glad/: glad.h
